<resources>
    <string name="app_name">Calculator</string>

    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="ac">AC</string>
    <string name="decimalSeparator">.</string>
    <string name="calculator">Calculator</string>
    <string name="currency">Currency</string>

    <string name="select_currency">Select Currency</string>
    <string name="cancel">Cancel</string>

    <string name="exchange_rates_text">Exchange rates are provided by Fixer.io\nConnect to the network to get the latest info.</string>
    <string name="exchange_rates_text_short">Exchange rates are provided by Fixer.io</string>
    <string name="updating_values">Updating Rates…</string>
    <string name="xf7">÷</string>


</resources>